--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="top-annoce">
-        <p>Si tu change le mode de ton navigateur en sombre ou clair les couleurs changeront ! 🤯</p>
+        <p>Si tu changes le mode de ton navigateur en sombre ou clair les couleurs changeront ! 🤯</p>
       </div>
       <div class="card">
         <h1>👑 Champion Ike 👑</h1>
