--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <a href="https://supersmashbros.fandom.com/fr/wiki/Ike" target="_blank" class="btn_bio">Ma bio</a>
       </div>
       <div class="card">
-        <h2>Voilà quelques une de mes prousses 😜</h2>
+        <h2>Voilà quelques une de mes prouesses 😜</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xHgQFSaTbzY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="audio">
-        <audio controls autoplay loop muted>
-          <source src="/medias/SuperSmashBrosUltimateMainTheme-Lifelight.mp3" type="audio/mpeg">
+        <audio controls autoplay muted>
+          <source src="medias/SuperSmashBrosUltimateMainTheme-Lifelight.mp3" type="audio/mp3">
         </audio>
       </div>
       <div class="card">
