--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="card">
         <h2>Voilà quelques une de mes prouesses 😜</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/xHgQFSaTbzY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="80%" height="315" src="https://www.youtube.com/embed/xHgQFSaTbzY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="audio">
         <audio controls autoplay muted>
